2002-05-22  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (oob): Loop reading data until we actually reach the
	URG marker.

2002-03-26  Ken Raeburn  <raeburn@mit.edu>

	* defines.h (FAI_PREFIX): Don't define.
	* kcmd.c (kcmd_connect): Don't include fake-addrinfo.c.

2002-03-20  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in: Remove dependencies on krb524_err.h for login.o. If
	compiling without krb4 support, this file will not be present.

2002-03-13  Ken Raeburn  <raeburn@mit.edu>

	* kcmd.c (kcmd_connect): Don't call fixup_addrinfo, it's been
	deleted.  Actually save errno value when preparing error text to
	print.  Free address info before returning.

2002-03-08  Ken Raeburn  <raeburn@mit.edu>

	* kcmd.c: Include fake-addrinfo.c once again.
	(kcmd_connect): Use getaddrinfo instead of gethostbyname, but only
	get AF_INET addresses for now.  Add new argument, pointer to where
	to store local socket address used; call getsockname to fill it
	in.  Always call getport with the address family from the current
	address.  Retry connection to the same remote address if the error
	returned was EADDRINUSE; that applies to the local address.
	(setup_socket): New function.
	(getport): Use setup_socket.  When selecting an address family to
	use, fall through in the last case instead of calling getport
	recursively.
	(kcmd, k4cmd): Don't call getsockname, let kcmd_connect do it.
	Delete unused variables.  Don't set *fd2p before calling
	setup_secondary_channel.
	(setup_secondary_channel): No cleanup is needed, just return error
	indications rather than branching to end of function.  If fd2p is
	non-null, initialize the pointed-to value to -1.

	* rcp.M: Document -f and -t options as internal use only.

2002-03-07  Ken Raeburn  <raeburn@mit.edu>

	* kcmd.c: Revert 2002-02-10 changes except those related to
	getport.
	(masktype): New typedef.
	(block_urgent, restore_sigs, kcmd_connect,
	setup_secondary_channel): New functions.