@@ -8,7 +8,12 @@
 .SH NAME
 kshd \- kerberized remote shell server
 .SH SYNOPSIS
-.B /usr/local/sbin/kshd -kr45ec
+.B /usr/local/sbin/kshd 
+[
+.B \-kr45ec
+]
+[\fB\-D\fP \fIport\fP]
+[\fB\-L\fP \fIvariable\fP]
 .SH DESCRIPTION
 .I Krshd
 is the server for the 
@@ -64,6 +69,12 @@ mechanisms.  This is the same as including \fB\-4\fP and \fB\-5\fP.
 Require the client to encrypt the connection.  Only Kerberos5 clients
 support encryption.
 
+.IP \fB\-L\ variable\fP
+Carry through the current value of the specified variable into the
+environment of the child.  This option can be used to preserve up to
+four variables.
+
+
 .IP \fB\-c\fP 
 Require Kerberos5 clients to present a cryptographic
 checksum of initial connection information like the name of the user
@@ -100,7 +111,7 @@ authentication from succeeding in the default mode.
 If the \fB\-r\fP or \fB\-R\fP options are used, the client must
 connect from a privileged port.
 .PP
-\fIKrshd\fP supports four options which may be used for testing:
+\fIKrshd\fP supports six options which may be used for testing:
 
 .IP \fB\-S\ keytab\fP 10
 Set the \fIkeytab\fP file to use.
@@ -114,6 +125,10 @@ Don't allocate a reserved port for the stderr connection.
 .IP \fB\-P\ path\fP
 Use the argument to find the Kerberos binaries.  Normally a compiled
 in argument is used.
+
+.IP \fB\-D\ port \fP
+Run in standalone mode, listening on \fBport\fP.  The daemon will exit
+after one connection and will not background itself.
 
 .TP
 \fB\-w \fP[\fBip\fP|\fImaxhostlen\fP[\fB,\fP[\fBno\fP]\fBstriplocal\fP]]
